feat(admin): api find by id tingkat adn jurusan